fix scrollbar

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -37,7 +37,7 @@
   color: $code-color;
   font-family: monospace;
   font-size: 0.7rem;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding: 1rem;
 }
 
